--- a/_includes/fabs.html
+++ b/_includes/fabs.html
@@ -1,12 +1,10 @@
 <!-- _includes/fabs.html -->
 
-<div id="fabs-container" style="display: none;">
+<div class="fab-container">
   {% assign lang = page.lang | default: 'en' %}
-  <div class="fabs-wrapper">
-    {% if lang == "he" %}
-      <a href="LANG_SWITCH_EN" class="fabs-button" aria-label="Switch to English" lang="en">EN</a>
-    {% else %}
-      <a href="LANG_SWITCH_HE" class="fabs-button" aria-label="Switch to Hebrew" lang="he">עב</a>
-    {% endif %}
-  </div>
+  {% if lang == "he" %}
+    <a href="LANG_SWITCH_EN" class="fab-button" aria-label="Switch to English" lang="en">EN</a>
+  {% else %}
+    <a href="LANG_SWITCH_HE" class="fab-button" aria-label="Switch to Hebrew" lang="he">עב</a>
+  {% endif %}
 </div>
