wordplay + barba + config

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -37,4 +37,4 @@
 @import "minimal-mistakes/print";
 
 /* Floating Action Burron */
-@import "minimal-mistakes/fabs";
+@import "minimal-mistakes/wordplay";
