--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,13 @@
 <body class="layout--{{ page.layout | default: layout.layout }} skin--{{ site.minimal_mistakes_skin | default: 'default' }} lang--{{ page.lang | default: site.lang }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}" dir="{% if page.rtl %}rtl{% else %}ltr{% endif %}"></body>
 
 {% include_cached skip-links.html %}
-    {% include_cached masthead.html %}
+    {% include header__wordplay.html %}
 
-    <div class="initial-content">
-      {{ content }}
-      {% include after-content.html %}
+    <div data-barba="wrapper">
+     <main data-barba="container" class="initial-content">
+       {{ content }}
+       {% include after-content.html %}
+     </main>
     </div>
 
     {% if site.search == true %}
@@ -31,7 +33,9 @@
         {% include_cached footer.html %}
       </footer>
     </div>
-    <script src="{{ '/assets/js/lang-fade.js' | relative_url }}"></script> 
+    <script src="{{ '/assets/js/lang-switch.js' | relative_url }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="{{ '/assets/js/wordplay.js' | relative_url }}"></script>
     {% include scripts.html %}
   </body>
 </html>
