theme updates general

--- a/_sass/minimal-mistakes/skins/_noirbloom.scss
+++ b/_sass/minimal-mistakes/skins/_noirbloom.scss
@@ -24,7 +24,7 @@ $selection-text: #f3ecff !default;
 $link-color: $primary-color !default;
 $link-color-hover: mix(#fff, $link-color, 25%) !default;
 $link-color-visited: mix(#000, $link-color, 25%) !default;
-$masthead-link-color: $text-color !default;
+$masthead-link-color: $primary-color !default;
 $masthead-link-color-hover: mix(#000, $text-color, 20%) !default;
 $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
 
