chat gpt tried to help

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,9 @@
         {% include_cached footer.html %}
       </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@barba/core@2.9.7/dist/barba.umd.min.js"></script>
     <script src="{{ '/assets/js/lang-switch.js' | relative_url }}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="{{ '/assets/js/wordplay.js' | relative_url }}"></script>
     {% include scripts.html %}
   </body>
