working mostly, fade in glitch persistant

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/Flip.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@barba/core@2.10.3/dist/barba.umd.min.js"></script>
-<!-- <script src="{{ '/assets/js/lang-switch.js' | relative_url }}"></script> -->
+<script src="{{ '/assets/js/barba-init.js' | relative_url }}"></script>
 <script src="{{ '/assets/js/wordplay.js' | relative_url }}"></script>
 
 {% include scripts.html %}
