--- a/_sass/minimal-mistakes/_wordplay.scss
+++ b/_sass/minimal-mistakes/_wordplay.scss
@@ -108,7 +108,14 @@ body.show-hebrew .word {
   }
 }
 
+[data-barba="container"] {
+  opacity: 1;
+  transition: none;
+}
 
+[data-barba="container"].is-animating {
+  opacity: 0;
+}
 
 //TEMP
 /**
